add slug and redirect when clicking on a list

--- a/src/todolist/templates/todolist/index.html
+++ b/src/todolist/templates/todolist/index.html
@@ -3,10 +3,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>INDEX</title>
+    <title>TodoList website</title>
 </head>
 <body>
-    <h1>Index page</h1>
+    <h1>Bienvenue XYZ</h1>
+    <p>
+        <a href="{% url 'todolist-lists' %}">View your list</a>
+    </p>
 
 </body>
 </html>
