--- a/src/todolist/templates/todolist/index.html
+++ b/src/todolist/templates/todolist/index.html
@@ -6,7 +6,8 @@
     <title>TodoList website</title>
 </head>
 <body>
-    <h1>Bienvenue XYZ</h1>
+    <h1>Welcome XYZ</h1>
+    <p>Currently there is no user management but ToDo list functionalities are working !</p>
     <p>
         <a href="{% url 'todolist-lists' %}">View your list</a>
     </p>
