All functionalities are done. V1 OK V2 : TODO : add user management

--- a/src/todolist/templates/todolist/index.html
+++ b/src/todolist/templates/todolist/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <h1>Welcome XYZ</h1>
-    <p>Currently there is no user management but ToDo list functionalities are working !</p>
+    <p>Currently there is no user management but ToDo list functionalities are working ! <br>
+    Source code is available on <a href="https://github.com/aanks0/django-todolist">GitHub</a>
+    </p>
     <p>
         <a href="{% url 'todolist-lists' %}">View your list</a>
     </p>
