--- a/src/todolist/templates/todolist/index.html
+++ b/src/todolist/templates/todolist/index.html
@@ -10,7 +10,7 @@
     <p>Currently there is no user management but ToDo list functionalities are working ! <br>
     Source code is available on <a href="https://github.com/aanks0/django-todolist">GitHub</a>
     </p>
-    <p>
+    <p style="font-size: xx-large">
         <a href="{% url 'todolist-lists' %}">View your list</a>
     </p>
 
